<resources>
    <string name="app_name">Final Project</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="edit">Edit</string>
    <string name="do_you_want_to_edit_the_movie_or_to_delete_it">Do you want to edit the movie or to delete it?</string>
    <string name="title_activity_present_movie">PresentMovieActivity</string>
    <string name="delete">Delete</string>
    <string name="search">Search:</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="subject">Subject</string>
    <string name="body">body</string>
    <string name="enter_description">Enter description</string>
    <string name="url">URL</string>
    <string name="enter_link">Enter Link</string>
    <string name="show">Show</string>
    <string name="save">Save</string>
    <string name="make_a_movie_list">make a movie list</string>
    <string name="textview">TextView</string>
    <string name="movie_description">Movie Description:</string>

</resources>