<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="com.example.android.finalproject.AddMovieMenually">

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subjectTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/subject"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/subjectTextView" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/body" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/enter_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/urlTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url" />

            <EditText
                android:id="@+id/imageLinkEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_link" />

            <Button
                android:id="@+id/showButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:textAllCaps="false"
                android:onClick="showButton_onClick"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:onClick="saveButton_onClick"
                android:text="@string/save" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/okButton"
                android:onClick="cancelButton_onClick"
                android:text="@string/cancel"
                android:textAllCaps="false" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>