<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:orientation="vertical" >
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/do_you_want_to_edit_the_movie_or_to_delete_it"

            android:textSize="15sp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="100dp"
                android:layout_height="30dp"
               android:padding="5dp"
                android:clickable="true"
                android:text="@string/edit"

                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:clickable="true"
                android:text="@string/delete"

                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>