<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="com.example.android.finalproject.AddMovieFromInternet"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"/>

        <EditText
            android:id="@+id/movieNameSearch"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/goSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:onClick="goSearch_onClick"
             />

    </LinearLayout>

    <ListView
        android:id="@+id/MovieList"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/search_bar"
        android:layout_above="@+id/cancelSearch">

    </ListView>

    <Button
        android:id="@+id/cancelSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_centerInParent="true"
        android:onClick="cancelSearch_onClick"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>